feat: modernize tracer with modern format, multi-file packages, reified generics, and textbook examples
Comprehensive modernization and architectural overhaul of cs1302-tracer:

- Core Subsystems & CLI:
  * Migrated CLI to Picocli with subcommands (trace, list-breakpoints, show-licenses), robust option parsing, and contextual help.
  * Added --all-breakpoints (-a) for chronological step-by-step execution tracing across all source lines.
  * Added dynamic license discovery and bundling via license-maven-plugin and show-licenses command.

- Multi-File Packages & Source Streaming:
  * Added automatic source root discovery for single files, directories, and package hierarchies without requiring extra flags.
  * Added standard input streaming support for multi-file sources separated by comment delimiters (// --- path/to/File.java ---).
  * Emitted relative source file path metadata across trace steps, call stacks, and breakpoint entries.

- Serialization & Formats:
  * Implemented Modern Clean JSON format (--format=modern / -f modern) providing explicit object graphs, dictionary-backed heaps, and pointer references.
  * Enhanced PythonTutor format (PyTutorSerializer) with static AST generic type recovery and runtime element sampling (heap_attrs).
  * Refactored data models into dedicated packages (cs1302.tracer.model.pytutor and cs1302.tracer.model.modern).

- Examples & Textbook Curriculum:
  * Built complete suite of 21 runnable reference examples (example0 through example20) mapped directly to CSCI 1302 textbook chapters (cs1302book.com).
  * Added per-example documentation (README.md) for every example.
  * Generated and packaged standalone distribution archives: pytutor-examples.zip and modern-examples.zip.

- Quality, Testing & Documentation:
  * Upgraded test suite to JUnit 6 with 100% branch and line coverage enforced by JaCoCo across all production classes.
  * Rewrote HACKING.md with complete architectural decomposition diagrams, design rationales, and develope