@@ -1,22 +1,35 @@
 package cs1302.tracer.serialize;
 
+import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
+import cs1302.tracer.CompilationHelper;
+import cs1302.tracer.model.pytutor.PyTutorTrace;
+import cs1302.tracer.model.pytutor.RenderStackFrame;
+import cs1302.tracer.model.pytutor.TraceStep;
 import cs1302.tracer.trace.ExecutionSnapshot;
 import cs1302.tracer.trace.ExecutionSnapshot.Field;
 import cs1302.tracer.trace.ExecutionSnapshot.StackSnapshot;
+import cs1302.tracer.trace.ExecutionSnapshot.StackSnapshot.ThisObject;
 import cs1302.tracer.trace.TraceValue;
 import java.nio.ByteBuffer;
 import java.nio.charset.CharacterCodingException;
 import java.nio.charset.Charset;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
+import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
+import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
-import java.util.stream.IntStream;
-import org.json.JSONArray;
-import org.json.JSONObject;
 
 /**
- * Container class for methods that help serialize a trace into the OnlinePythonTutor format.
+ * Container class for methods that help serialize a trace into the OnlinePythonTutor format using
+ * Gson.
  *
  * @param removeMainArgs True if the `args` parameter to main should be excluded from serializations
  *     produced by this instance.
@@ -28,80 +41,204 @@ import org.json.JSONObject;
 public record PyTutorSerializer(
     boolean removeMainArgs, boolean inlineStrings, boolean removeMethodThis) {
 
+  private static final Gson GSON =
+      new GsonBuilder().serializeNulls().disableHtmlEscaping().create();
+
   /**
-   * Serialize an execution snapshot into the OnlinePythonTutor trace format.
+   * Get the configured Gson instance.
+   *
+   * @return The Gson instance.
+   */
+  public static Gson getGson() {
+    return GSON;
+  }
+
+  /**
+   * Determine if the given source or snapshots represent a multi-file program.
+   *
+   * @param javaSource The raw source string.
+   * @param snapshots The execution snapshots.
+   * @return True if multi-file code is present.
+   */
+  private boolean isMultiFileSource(String javaSource, List<ExecutionSnapshot> snapshots) {
+    if (CompilationHelper.DELIMITER_PATTERN.matcher(javaSource).find()) {
+      return true;
+    }
+    Set<String> distinctFiles = new HashSet<>();
+    for (ExecutionSnapshot snapshot : snapshots) {
+      snapshot.sourcePath().ifPresent(distinctFiles::add);
+      for (StackSnapshot frame : snapshot.stack()) {
+        frame.sourcePath().ifPresent(distinctFiles::add);
+      }
+    }
+    return distinctFiles.size() > 1;
+  }
+
+  /**
+   * Create a {@link PyTutorTrace} model representing the given snapshot.
    *
    * @param javaSource The source code for the program corresponding to the execution snapshot.
    * @param snapshot The snapshot that should be serialized.
-   * @return The serialized execution snapshot.
+   * @return The structured PyTutorTrace model.
    */
-  public JSONObject serialize(String javaSource, ExecutionSnapshot snapshot) {
-    String currentMethod = snapshot.stack().getLast().methodName();
-    long currentLine = snapshot.stack().getLast().methodLine();
+  public PyTutorTrace createTrace(String javaSource, ExecutionSnapshot snapshot) {
+    boolean isMultiFile = isMultiFileSource(javaSource, List.of(snapshot));
+    TraceStep step = createTraceStep(snapshot, isMultiFile);
+    return new PyTutorTrace(javaSource, "", List.of(step), "");
+  }
 
-    JSONObject serializedStatics =
-        new JSONObject(
-            snapshot.statics().stream()
-                .collect(
-                    Collectors.toMap(
-                        ExecutionSnapshot.Field::identifier,
-                        s -> serializeTraceValue(s.value(), snapshot.heap()))));
+  /**
+   * Create a {@link PyTutorTrace} model representing a chronological sequence of snapshots.
+   *
+   * @param javaSource The source code for the program corresponding to the execution snapshots.
+   * @param snapshots The list of snapshots in chronological order that should be serialized.
+   * @return The structured PyTutorTrace model.
+   */
+  public PyTutorTrace createTrace(String javaSource, List<ExecutionSnapshot> snapshots) {
+    boolean isMultiFile = isMultiFileSource(javaSource, snapshots);
+    List<TraceStep> steps = snapshots.stream().map(s -> createTraceStep(s, isMultiFile)).toList();
+    return new PyTutorTrace(javaSource, "", steps, "");
+  }
 
-    JSONArray orderedStatics =
-        new JSONArray(
-            snapshot.statics().stream().map(ExecutionSnapshot.Field::identifier).toList());
+  /**
+   * Create a {@link TraceStep} model representing the given snapshot.
+   *
+   * @param snapshot The snapshot that should be transformed.
+   * @return The structured TraceStep model.
+   */
+  public TraceStep createTraceStep(ExecutionSnapshot snapshot) {
+    return createTraceStep(snapshot, false);
+  }
 
-    Map<String, JSONObject> globalsAttrs =
-        snapshot.statics().stream()
-            .collect(
-                Collectors.toMap(
-                    Field::identifier,
-                    f -> new JSONObject().put("type", f.typeName()).put("final", f.isFinal())));
+  /**
+   * Create a {@link TraceStep} model representing the given snapshot with multi-file setting.
+   *
+   * @param snapshot The snapshot that should be transformed.
+   * @param isMultiFile Whether to include source file path metadata.
+   * @return The structured TraceStep model.
+   */
+  public TraceStep createTraceStep(ExecutionSnapshot snapshot, boolean isMultiFile) {
+    String currentMethod =
+        snapshot.stack().isEmpty() ? "" : snapshot.stack().getLast().methodName();
+    long currentLine = snapshot.stack().isEmpty() ? 0 : snapshot.stack().getLast().methodLine();
 
-    JSONObject serializedHeap =
-        new JSONObject(
-            snapshot.heap().entrySet().stream()
-                .filter(e -> !(inlineStrings && e.getValue() instanceof TraceValue.String))
-                .collect(
-                    Collectors.toMap(
-                        Entry::getKey, e -> serializeTraceValue(e.getValue(), snapshot.heap()))));
+    Map<String, Object> serializedStatics = new LinkedHashMap<>();
+    List<String> orderedStatics = new ArrayList<>();
+    Map<String, Object> globalsAttrs = new LinkedHashMap<>();
 
-    Map<String, JSONObject> heapAttrs = new HashMap<>();
+    // Map heap references to declared type names from statics, stack, and object fields
+    Map<Long, String> declaredTypes = new HashMap<>();
+
+    for (Field f : snapshot.statics()) {
+      serializedStatics.put(f.identifier(), serializeTraceValue(f.value(), snapshot.heap()));
+      orderedStatics.add(f.identifier());
+      globalsAttrs.put(f.identifier(), Map.of("type", f.typeName(), "final", f.isFinal()));
+      if (f.value() instanceof TraceValue.Reference ref) {
+        declaredTypes.put(ref.uniqueId(), f.typeName());
+      }
+    }
+
+    for (StackSnapshot frame : snapshot.stack()) {
+      for (Field f : frame.visibleVariables()) {
+        if (f.value() instanceof TraceValue.Reference ref) {
+          declaredTypes.put(ref.uniqueId(), f.typeName());
+        }
+      }
+      if (frame.thisObject().isPresent()) {
+        ThisObject to = frame.thisObject().get();
+        declaredTypes.put(to.value().uniqueId(), to.typeName());
+      }
+    }
+
+    for (TraceValue tv : snapshot.heap().values()) {
+      if (tv instanceof TraceValue.Object obj) {
+        for (Field f : obj.fields()) {
+          if (f.value() instanceof TraceValue.Reference ref) {
+            declaredTypes.put(ref.uniqueId(), f.typeName());
+          }
+        }
+      }
+    }
+
+    Map<String, Object> serializedHeap = new LinkedHashMap<>();
+    for (Entry<Long, TraceValue> e : snapshot.heap().entrySet()) {
+      if (!(inlineStrings && e.getValue() instanceof TraceValue.String)) {
+        serializedHeap.put(
+            e.getKey().toString(), serializeTraceValue(e.getValue(), snapshot.heap()));
+      }
+    }
+
+    Map<String, Object> heapAttrs = new LinkedHashMap<>();
     for (Entry<Long, TraceValue> e : snapshot.heap().entrySet()) {
       String key = e.getKey().toString();
-      switch (e.getValue()) {
+      Long id = e.getKey();
+      TraceValue val = e.getValue();
+      switch (val) {
         case TraceValue.Object o -> {
-          JSONArray objectTypes =
-              new JSONArray(o.fields().stream().map(ExecutionSnapshot.Field::typeName).toList());
-          JSONArray objectFinals =
-              new JSONArray(o.fields().stream().map(ExecutionSnapshot.Field::isFinal).toList());
-          heapAttrs.put(key, new JSONObject().put("type", objectTypes).put("final", objectFinals));
+          List<String> objectTypes =
+              o.fields().stream().map(Field::typeName).collect(Collectors.toList());
+          heapAttrs.put(key, Map.of("type", objectTypes));
         }
         case TraceValue.List a -> {
-          heapAttrs.put(key, new JSONObject().put("type", a.typeName()));
+          String resolvedType = resolveListType(id, a, declaredTypes, snapshot.heap());
+          heapAttrs.put(key, Map.of("type", resolvedType));
+        }
+        case TraceValue.Map m -> {
+          String resolvedType = resolveMapType(id, m, declaredTypes, snapshot.heap());
+          heapAttrs.put(key, Map.of("type", resolvedType));
+        }
+        case TraceValue.Collection c -> {
+          String resolvedType = resolveCollectionType(id, c, declaredTypes, snapshot.heap());
+          heapAttrs.put(key, Map.of("type", resolvedType));
+        }
+        case TraceValue.String s -> {
+          heapAttrs.put(key, Map.of("type", "java.lang.String"));
+        }
+        case TraceValue.Primitive.Integer i -> {
+          heapAttrs.put(key, Map.of("type", "java.lang.Integer"));
+        }
+        case TraceValue.Primitive.Double d -> {
+          heapAttrs.put(key, Map.of("type", "java.lang.Double"));
+        }
+        case TraceValue.Primitive.Boolean b -> {
+          heapAttrs.put(key, Map.of("type", "java.lang.Boolean"));
+        }
+        case TraceValue.Primitive.Long l -> {
+          heapAttrs.put(key, Map.of("type", "java.lang.Long"));
+        }
+        case TraceValue.Primitive.Float f -> {
+          heapAttrs.put(key, Map.of("type", "java.lang.Float"));
+        }
+        case TraceValue.Primitive.Character c -> {
+          heapAttrs.put(key, Map.of("type", "java.lang.Character"));
+        }
+        case TraceValue.Primitive.Byte b -> {
+          heapAttrs.put(key, Map.of("type", "java.lang.Byte"));
+        }
+        case TraceValue.Primitive.Short s -> {
+          heapAttrs.put(key, Map.of("type", "java.lang.Short"));
+        }
+        case TraceValue.Lambda l -> {
+          heapAttrs.put(key, Map.of("type", "lambda"));
         }
         default -> {}
       }
     }
 
-    if (removeMainArgs) {
-      // don't include String[] args in main
-      snapshot.stack().getFirst().visibleVariables().removeFirst();
-    } // if
-
-    JSONArray serializedStackToRender =
-        new JSONArray()
-            .putAll(
-                IntStream.range(0, snapshot.stack().size())
-                    .boxed()
-                    .map(
-                        uniqueFrameId ->
-                            serializeStackSnapshot(
-                                snapshot.stack().get(uniqueFrameId),
-                                uniqueFrameId,
-                                uniqueFrameId == snapshot.stack().size() - 1,
-                                snapshot.heap())) // map
-                    .toArray());
+    List<RenderStackFrame> serializedStackToRender = new ArrayList<>();
+    int stackSize = snapshot.stack().size();
+    for (int uniqueFrameId = 0; uniqueFrameId < stackSize; uniqueFrameId++) {
+      boolean isCurrent = (uniqueFrameId == stackSize - 1);
+      boolean isMain = (uniqueFrameId == 0);
+      serializedStackToRender.add(
+          serializeStackSnapshot(
+              snapshot.stack().get(uniqueFrameId),
+              uniqueFrameId,
+              isCurrent,
+              isMain,
+              snapshot.heap(),
+              isMultiFile));
+    }
 
     String stdout;
     try {
@@ -125,26 +262,33 @@ public record PyTutorSerializer(
       stderr = "";
     }
 
-    return new JSONObject()
-        .put("code", javaSource)
-        .put("stdin", "")
-        .put(
-            "trace",
-            new JSONArray()
-                .put(
-                    new JSONObject()
-                        .put("stdout", new String(stdout))
-                        .put("stderr", new String(stderr)) // NOTE this isn't currently used
-                        .put("event", "step_line")
-                        .put("func_name", currentMethod)
-                        .put("line", currentLine)
-                        .put("stack_to_render", serializedStackToRender)
-                        .put("globals", serializedStatics)
-                        .put("globals_attrs", new JSONObject(globalsAttrs))
-                        .put("ordered_globals", orderedStatics)
-                        .put("heap", serializedHeap)
-                        .put("heap_attrs", new JSONObject(heapAttrs))))
-        .put("userlog", "");
+    String stepFile = isMultiFile ? snapshot.sourcePath().orElse(null) : null;
+
+    return new TraceStep(
+        stdout,
+        stderr,
+        "step_line",
+        currentMethod,
+        currentLine,
+        serializedStackToRender,
+        serializedStatics,
+        globalsAttrs,
+        orderedStatics,
+        serializedHeap,
+        heapAttrs,
+        stepFile);
+  }
+
+  /**
+   * Serialize an execution snapshot into the OnlinePythonTutor JSON trace string.
+   *
+   * @param javaSource The source code for the program corresponding to the execution snapshot.
+   * @param snapshot The snapshot that should be serialized.
+   * @return The serialized execution snapshot as a JSON string.
+   */
+  public String serialize(String javaSource, ExecutionSnapshot snapshot) {
+    PyTutorTrace trace = createTrace(javaSource, snapshot);
+    return GSON.toJson(trace);
   }
 
   /**
@@ -153,99 +297,91 @@ public record PyTutorSerializer(
    * @param stackSnapshot The snapshot to serialize.
    * @param uniqueFrameId A unique ID for the frame.
    * @param isCurrentFrame True if this is the top-level/executing/current frame, false otherwise.
+   * @param isMainFrame True if this is the bottommost frame (frame 0).
    * @param heap The program's heap.
-   * @return The serialization of the snapshot.
+   * @param isMultiFile Whether to serialize source file metadata.
+   * @return The RenderStackFrame model.
    */
-  private JSONObject serializeStackSnapshot(
+  private RenderStackFrame serializeStackSnapshot(
       StackSnapshot stackSnapshot,
       int uniqueFrameId,
       boolean isCurrentFrame,
-      Map<Long, TraceValue> heap) {
+      boolean isMainFrame,
+      Map<Long, TraceValue> heap,
+      boolean isMultiFile) {
 
-    Map<String, Object> encodedLocals =
-        stackSnapshot.visibleVariables().stream()
-            .collect(
-                Collectors.toMap(
-                    ExecutionSnapshot.Field::identifier,
-                    field -> serializeTraceValue(field.value(), heap)) // toMap
-                );
-
-    JSONArray orderedVarnames =
-        new JSONArray(
-            stackSnapshot.visibleVariables().stream()
-                .map(ExecutionSnapshot.Field::identifier)
-                .toList());
-
-    Map<String, JSONObject> localsAttrs =
-        stackSnapshot.visibleVariables().stream()
-            .collect(
-                Collectors.toMap(
-                    Field::identifier,
-                    f -> new JSONObject().put("type", f.typeName()).put("final", f.isFinal())));
+    Map<String, Object> encodedLocals = new LinkedHashMap<>();
+    List<String> orderedVarnames = new ArrayList<>();
+    Map<String, Object> localsAttrs = new LinkedHashMap<>();
 
     stackSnapshot
         .thisObject()
         .ifPresent(
             t -> {
-              if (removeMethodThis) {
-                return;
+              if (!removeMethodThis) {
+                orderedVarnames.add("this");
+                localsAttrs.put("this", Map.of("type", t.typeName(), "final", true));
+                encodedLocals.put("this", serializeTraceValue(t.value(), heap));
               }
-
-              JSONArray newOrderedVarnames = new JSONArray().put("this").putAll(orderedVarnames);
-              orderedVarnames.clear();
-              orderedVarnames.putAll(newOrderedVarnames);
-
-              localsAttrs
-                  .put("this", new JSONObject().put("type", t.typeName()))
-                  .put("final", true);
-              encodedLocals.put("this", serializeTraceValue(t.value(), heap));
             });
+
+    for (Field field : stackSnapshot.visibleVariables()) {
+      if (removeMainArgs && isMainFrame && "args".equals(field.identifier())) {
+        continue;
+      }
+      orderedVarnames.add(field.identifier());
+      localsAttrs.put(
+          field.identifier(), Map.of("type", field.typeName(), "final", field.isFinal()));
+      encodedLocals.put(field.identifier(), serializeTraceValue(field.value(), heap));
+    }
 
     String funcName =
         String.format("%s:%d", stackSnapshot.methodName(), stackSnapshot.methodLine());
+    String frameFile = isMultiFile ? stackSnapshot.sourcePath().orElse(null) : null;
 
-    return new JSONObject()
-        .put("func_name", funcName)
-        .put("encoded_locals", new JSONObject(encodedLocals))
-        .put("locals_attrs", new JSONObject(localsAttrs))
-        .put("ordered_varnames", orderedVarnames)
-        .put("parent_frame_id_list", new JSONArray())
-        .put("is_highlighted", isCurrentFrame)
-        .put("is_zombie", false)
-        .put("is_parent", false)
-        .put("unique_hash", String.valueOf(uniqueFrameId))
-        .put("frame_id", uniqueFrameId);
-  } // serializeStackSnapshot
+    return new RenderStackFrame(
+        funcName,
+        encodedLocals,
+        localsAttrs,
+        orderedVarnames,
+        Collections.emptyList(),
+        isCurrentFrame,
+        false,
+        false,
+        String.valueOf(uniqueFrameId),
+        uniqueFrameId,
+        frameFile);
+  }
 
   /**
-   * Serialize a TraceValue into a Boolean, Double, Integer, JSONArray, JSONObject, Long, String, or
-   * the JSONObject.NULL object
+   * Serialize a TraceValue into a standard Java object / List / Map representation suitable for
+   * Gson serialization into the PyTutor specification.
    *
    * @param value The value to serialize.
-   * @param heap A mapping of heap IDs to other TraceValues so that compound data types can be
-   *     properly serialized.
-   * @return A Boolean, Double, Integer, JSONArray, JSONObject, Long, String, or JSONObject.NULL
-   *     that corresponds to the TraceValue
+   * @param heap A mapping of heap IDs to other TraceValues.
+   * @return An object, List, Map, or null corresponding to the PyTutor JSON value.
    */
   private Object serializeTraceValue(TraceValue value, Map<Long, TraceValue> heap) {
     return switch (value) {
-      case TraceValue.Primitive.Float floatValue ->
-          new JSONArray().put("NUMBER-LITERAL").put(Float.toString(floatValue.value()));
+      case null -> null;
+
+      case TraceValue.Primitive.Float floatValue -> List.of(
+          "NUMBER-LITERAL", Float.toString(floatValue.value()));
 
       case TraceValue.Primitive.Double doubleValue -> {
         if (doubleValue.value() == Double.POSITIVE_INFINITY) {
-          yield new JSONArray().put("SPECIAL_FLOAT").put("Infinity");
+          yield List.of("SPECIAL_FLOAT", "Infinity");
         } else if (doubleValue.value() == Double.NEGATIVE_INFINITY) {
-          yield new JSONArray().put("SPECIAL_FLOAT").put("-Infinity");
+          yield List.of("SPECIAL_FLOAT", "-Infinity");
         } else if (Double.isNaN(doubleValue.value())) {
-          yield new JSONArray().put("SPECIAL_FLOAT").put("NaN");
+          yield List.of("SPECIAL_FLOAT", "NaN");
         } else {
-          yield new JSONArray().put("NUMBER-LITERAL").put(Double.toString(doubleValue.value()));
-        } // if
-      } // case
+          yield List.of("NUMBER-LITERAL", Double.toString(doubleValue.value()));
+        }
+      }
 
-      case TraceValue.Primitive.Character charValue ->
-          new JSONArray().put("CHAR-LITERAL").put(Character.toString(charValue.value()));
+      case TraceValue.Primitive.Character charValue -> List.of(
+          "CHAR-LITERAL", Character.toString(charValue.value()));
 
       case TraceValue.Primitive primitiveValue -> primitiveValue.toWrapperObject();
 
@@ -254,64 +390,175 @@ public record PyTutorSerializer(
         if (target instanceof TraceValue.String && inlineStrings) {
           yield serializeTraceValue(target, heap);
         } else {
-          yield new JSONArray().put("REF").put(referenceValue.uniqueId());
-        } // if
-      } // case
+          yield List.of("REF", referenceValue.uniqueId());
+        }
+      }
 
-      case TraceValue.Null nullValue -> JSONObject.NULL;
+      case TraceValue.Null nullValue -> null;
 
       case TraceValue.String stringValue -> {
         if (inlineStrings) {
           yield stringValue.value();
         } else {
-          yield new JSONArray()
-              .put("INSTANCE")
-              .put("String")
-              .put(new JSONArray().put("___NO_LABEL!___").put(stringValue.value()));
-        } // if
-      } // case
+          yield List.of("INSTANCE", "String", List.of("___NO_LABEL!___", stringValue.value()));
+        }
+      }
 
       case TraceValue.List listValue -> {
-        Object[] values =
-            listValue.value().stream().map(e -> serializeTraceValue(e, heap)).toArray();
-        yield new JSONArray().put("LIST").putAll(values);
-      } // case
+        List<Object> list = new ArrayList<>();
+        list.add("LIST");
+        for (TraceValue elem : listValue.value()) {
+          list.add(serializeTraceValue(elem, heap));
+        }
+        yield list;
+      }
 
       case TraceValue.Collection collectionValue -> {
-        Object[] values =
-            collectionValue.value().stream().map(e -> serializeTraceValue(e, heap)).toArray();
-        yield new JSONArray().put("SET").putAll(values);
-      } // case
+        List<Object> list = new ArrayList<>();
+        list.add("SET");
+        for (TraceValue elem : collectionValue.value()) {
+          list.add(serializeTraceValue(elem, heap));
+        }
+        yield list;
+      }
 
       case TraceValue.Map mapValue -> {
-        Object[] values =
-            mapValue.value().entrySet().stream()
-                .map(
-                    entry ->
-                        new JSONArray()
-                            .put(serializeTraceValue(entry.getKey(), heap))
-                            .put(serializeTraceValue(entry.getValue(), heap)))
-                .toArray();
-        yield new JSONArray().put("DICT").putAll(values);
-      } // case
+        List<Object> list = new ArrayList<>();
+        list.add("DICT");
+        for (Entry<? extends TraceValue, ? extends TraceValue> entry :
+            mapValue.value().entrySet()) {
+          list.add(
+              Arrays.asList(
+                  serializeTraceValue(entry.getKey(), heap),
+                  serializeTraceValue(entry.getValue(), heap)));
+        }
+        yield list;
+      }
 
       case TraceValue.Object objectValue -> {
-        // System.err.println(objectValue.
-        yield new JSONArray()
-            .put("INSTANCE")
-            .put(objectValue.classFqn())
-            .putAll(
-                objectValue.fields().stream()
-                    .map(
-                        field ->
-                            new JSONArray()
-                                .put(field.identifier())
-                                .put(serializeTraceValue(field.value(), heap)))
-                    .toArray());
-      } // case
-      case TraceValue.Lambda lambdaValue -> {
-        yield new JSONArray().put("JAVA_LAMBDA").put(lambdaValue.implementation());
+        List<Object> list = new ArrayList<>();
+        list.add("INSTANCE");
+        list.add(objectValue.classFqn());
+        for (Field field : objectValue.fields()) {
+          list.add(Arrays.asList(field.identifier(), serializeTraceValue(field.value(), heap)));
+        }
+        yield list;
       }
+
+      case TraceValue.Lambda lambdaValue -> List.of("JAVA_LAMBDA", lambdaValue.implementation());
+    };
+  }
+
+  private static Optional<String> extractGenericArguments(String declaredType) {
+    if (declaredType == null) {
+      return Optional.empty();
+    }
+    int start = declaredType.indexOf('<');
+    int end = declaredType.lastIndexOf('>');
+    if (start != -1 && end > start) {
+      return Optional.of(declaredType.substring(start, end + 1));
+    }
+    return Optional.empty();
+  }
+
+  private static String resolveListType(
+      Long id, TraceValue.List list, Map<Long, String> declaredTypes, Map<Long, TraceValue> heap) {
+    String typeName = list.typeName();
+    if (typeName.endsWith("[]")) {
+      return typeName;
+    }
+    String declared = declaredTypes.get(id);
+    Optional<String> genericArgs = extractGenericArguments(declared);
+    if (genericArgs.isPresent()) {
+      return typeName + genericArgs.get();
+    }
+    if (!list.value().isEmpty()) {
+      String elemType = sampleElementType(list.value(), heap);
+      if (elemType != null) {
+        return typeName + "<" + elemType + ">";
+      }
+    }
+    return typeName;
+  }
+
+  private static String resolveCollectionType(
+      Long id, TraceValue.Collection col, Map<Long, String> declaredTypes, Map<Long, TraceValue> heap) {
+    String typeName = col.typeName();
+    String declared = declaredTypes.get(id);
+    Optional<String> genericArgs = extractGenericArguments(declared);
+    if (genericArgs.isPresent()) {
+      return typeName + genericArgs.get();
+    }
+    if (!col.value().isEmpty()) {
+      String elemType = sampleElementType(col.value(), heap);
+      if (elemType != null) {
+        return typeName + "<" + elemType + ">";
+      }
+    }
+    return typeName;
+  }
+
+  private static String resolveMapType(
+      Long id, TraceValue.Map map, Map<Long, String> declaredTypes, Map<Long, TraceValue> heap) {
+    String typeName = map.typeName();
+    String declared = declaredTypes.get(id);
+    Optional<String> genericArgs = extractGenericArguments(declared);
+    if (genericArgs.isPresent()) {
+      return typeName + genericArgs.get();
+    }
+    if (!map.value().isEmpty()) {
+      String keyType = sampleElementType(map.value().keySet(), heap);
+      String valType = sampleElementType(map.value().values(), heap);
+      if (keyType != null && valType != null) {
+        return typeName + "<" + keyType + ", " + valType + ">";
+      }
+    }
+    return typeName;
+  }
+
+  private static String sampleElementType(
+      java.util.Collection<? extends TraceValue> elements, Map<Long, TraceValue> heap) {
+    String inferred = null;
+    for (TraceValue elem : elements) {
+      String type = getSimpleTypeName(elem, heap);
+      if (type == null) {
+        return null;
+      }
+      if (inferred == null) {
+        inferred = type;
+      } else if (!inferred.equals(type)) {
+        return null;
+      }
+    }
+    return inferred;
+  }
+
+  private static String getSimpleTypeName(TraceValue value, Map<Long, TraceValue> heap) {
+    if (value instanceof TraceValue.Reference ref) {
+      TraceValue target = heap.get(ref.uniqueId());
+      if (target != null) {
+        return getSimpleTypeName(target, heap);
+      }
+    }
+    return switch (value) {
+      case TraceValue.String s -> "String";
+      case TraceValue.Primitive.Integer i -> "Integer";
+      case TraceValue.Primitive.Double d -> "Double";
+      case TraceValue.Primitive.Boolean b -> "Boolean";
+      case TraceValue.Primitive.Long l -> "Long";
+      case TraceValue.Primitive.Float f -> "Float";
+      case TraceValue.Primitive.Character c -> "Character";
+      case TraceValue.Primitive.Byte b -> "Byte";
+      case TraceValue.Primitive.Short s -> "Short";
+      case TraceValue.Object o -> {
+        String fqn = o.classFqn();
+        int lastDot = fqn.lastIndexOf('.');
+        yield (lastDot != -1) ? fqn.substring(lastDot + 1) : fqn;
+      }
+      case TraceValue.List l -> l.typeName();
+      case TraceValue.Map m -> m.typeName();
+      case TraceValue.Collection c -> c.typeName();
+      default -> null;
     };
   }
 }
